@@ -90,3 +90,4 @@ wirbel
 
 Jori Hamalainen
   for extensive testing while making stream compatible to Network Media Tank
+  for adding Network Media Tank browser support to HTML pages
